# libfwk

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Makefile-shared  Makefile.include  blender-fixed-collada-exporter.patch  convert-blend.sh  dependencies.json  grep.sh  install_deps.py  libfwk.natvis  libfwk.sln  libfwk.vcxproj  libfwk.vcxproj.filters  libfwk_deps.bat  license.txt  model_convert.vcxproj  model_convert.vcxproj.filters  model_viewer.vcxproj  model_viewer.vcxproj.filters  pre-commit  readme.md  run-tests.sh  test.fsh  test.vsh  test_window.vcxproj  todo.txt  wine-run-tests.sh
.github/workflows/: build-package.yml  build-packages.yml  build.yml  test.yml
data/: export_fwk_mesh.py  export_fwk_model.py  export_fwk_model_279.py  export_fwk_model_280.py  flat_shader.fsh  flat_shader.vsh  liberation_16.fnt  liberation_16_0.tga  test.blend
docs/: tet_csg.txt
include/: fwk.h  fwk_assert.h  fwk_audio.h  fwk_base.h  fwk_cache.h  fwk_collada.h  fwk_color.h  fwk_format.h  fwk_forward_decls.h  fwk_gfx.h  fwk_index_range.h  fwk_input.h  fwk_math.h  fwk_math_ext.h  fwk_maybe.h  fwk_mesh.h  fwk_opengl.h  fwk_parse.h  fwk_profile.h  fwk_range.h  fwk_string.h  fwk_variant.h  fwk_vector.h  fwk_xml.h
include/fwk/: algorithm.h  any.h  any_config.h  any_ref.h  array.h  audio_base.h  base_vector.h  base_vector_impl.h  bit_vector.h  cstring.h  dynamic.h  enum.h  enum_flags.h  enum_map.h  filesystem.h  flat_impl.h  format.h  fwd_member.h  geom_base.h  gfx_base.h  hash_map.h  hash_map_stats.h  hash_map_storage.h  hash_set.h  heap.h  index_range.h  indexed_vector.h  iterator.h  libs_msvc.h  light_tuple.h  list_node.h  logger.h  math_base.h  maybe.h  maybe_ref.h  menu_base.h  menu_imgui.h  menu_imgui_internal.h  meta.h  meta_base.h  (+24 more)
include/fwk/audio/: sound.h  (+2 more)
src/: any.cpp  any_config.cpp  any_ref.cpp  backtrace.cpp  base.cpp  base_vector.cpp  bit_vector.cpp  cache.cpp  cstring.cpp  enum.cpp  filesystem.cpp  filesystem_linux.cpp  filesystem_windows.cpp  format.cpp  fwk_pch.h  geom_base.cpp  hash_map_stats.cpp  html_pre_include.cpp  html_text.html  html_webgl.html  input.cpp  logger.cpp  math.cpp  name_mapping.cpp  parse.cpp  pch.h  profiler.cpp  slab_allocator.cpp  str.cpp  stream.cpp  string.cpp  strings.cpp  sys_base.cpp  sys_base_windows.cpp  system_windows.cpp  text_formatter.cpp  text_parser.cpp  type_info.cpp  vector.cpp  vulkan_base.cpp  (+2 more)
src/audio/: al_device.cpp  device.cpp  device.h  ogg_stream.cpp  ogg_stream.h  sound.cpp  sound.h
src/checker/: .ycm_extra_conf.py  Makefile  checker.cpp  pch.h
src/geom/: contour.cpp  delaunay.cpp  element_ref.cpp  geom_graph.cpp  graph.cpp  immutable_graph.cpp  plane_graph.cpp  plane_graph_builder.cpp  procgen.cpp  regular_grid.cpp  segment_grid.cpp  voronoi.cpp  voronoi_constructor.cpp  wide_int.cpp
src/gfx/: animated_model.cpp  assimp_exporter.cpp  assimp_importer.cpp  block_image.cpp  buffer.cpp  camera.cpp  camera_control.cpp  canvas_2d.cpp  canvas_3d.cpp  collada.cpp  color.cpp  colored_quad.cpp  colored_triangle.cpp  compressed_image.cpp  converter.cpp  device.cpp  device_texture.cpp  draw_call.cpp  drawing.cpp  dtexture.cpp  dynamic_mesh.cpp  dynamic_mesh_csg.cpp  element_buffer.cpp  float_image.cpp  font.cpp  font_factory.cpp  font_finder.cpp  fpp_camera.cpp  fps_camera.cpp  frame_buffer.cpp  framebuffer.cpp  gfx_device.cpp  gl_buffer.cpp  gl_device.cpp  gl_format.cpp  gl_framebuffer.cpp  gl_program.cpp  gl_query.cpp  gl_renderbuffer.cpp  gl_shader.cpp  (+72 more)
src/gui/: gui.cpp  gui_impl.h  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  popups.cpp  widgets.cpp
src/io/: file_stream.cpp  file_system.cpp  file_system_posix.cpp  file_system_windows.cpp  gzip_stream.cpp  memory_stream.cpp  package_file.cpp  stream.cpp  stream_inl.h  url_fetch.cpp  xml.cpp
src/math/: affine_trans.cpp  base.cpp  box.cpp  cylinder.cpp  ext24.cpp  frustum.cpp  gcd.cpp  int128.cpp  interval.cpp  line.cpp  matrix3.cpp  matrix4.cpp  matrix4_transform.cpp  obox.cpp  param_segment.cpp  plane.cpp  projection.cpp  qint.cpp  quat.cpp  random.cpp  rational.cpp  rational2.cpp  rational3.cpp  rational_angle.cpp  ray.cpp  rect.cpp  rotation.cpp  segment.cpp  tetrahedron.cpp  triangle.cpp  triangulation.cpp  uint128.cpp  vector.cpp
src/menu/: error_popup.cpp  helpers.cpp  imgui_base.cpp  imgui_code.cpp  imgui_widgets.cpp  imgui_wrapper.cpp  open_file_popup.cpp
src/perf/: analyzer.cpp  exec_tree.cpp  manager.cpp  perf_base.cpp  thread_context.cpp
src/rapidxml/: rapidxml.hpp
src/stuff/: ext24_approximations.cpp
src/sys/: assert.cpp  assert_impl.cpp  assert_info.cpp  backtrace.cpp  backtrace_dwarf.cpp  backtrace_dwarf.h  error.cpp  exception.cpp  expected.cpp  file_stream.cpp  file_system.cpp  file_system_linux.cpp  file_system_windows.cpp  input.cpp  memory.cpp  memory_stream.cpp  on_fail.cpp  rollback.cpp  stream.cpp  thread.cpp  windows.h  xml.cpp
src/temp/: collada.cpp  cool.cpp  dynamic_mesh_csg.cpp  dynamic_mesh_csg.h  dynamic_mesh_csg_base.cpp  fwk_collada.h  half_mesh.cpp  half_mesh.h  half_tet_mesh.cpp  half_tet_mesh.h  int_encoding.cpp  save_svg.cpp  tet_mesh.cpp  tet_mesh.h  tet_stuff.cpp
src/test/: enums.cpp  math.cpp  models.cpp  rollback_test.cpp  streams.cpp  stuff.cpp  testing.h  timer.h  variant_perf.cpp  vector.cpp  vector_perf.cpp  window.cpp
src/tests/: enums.cpp  geom.cpp  hash_map_perf.cpp  math.cpp  models.cpp  rollback_test.cpp  streams.cpp  stuff.cpp  testing.h  timer.h  variant_perf.cpp  vector.cpp  vector_perf.cpp  vulkan.cpp  window.cpp
src/tools/: mesh_convert.cpp  mesh_viewer.cpp  model_convert.cpp  model_viewer.cpp  packager.cpp
src/triangle/: triangle.c
src/voropp/: cell.hh  cmd_line.cc  voropp.cpp  voropp.hh
tools/: configure.py  format.py  install_deps.py
windows/: libfwk.natstepfilter  libfwk.natvis  libfwk.sln  libfwk.vcxproj  libfwk.vcxproj.filters  model_convert.vcxproj  model_viewer.vcxproj  shared_libraries.props  test_geom.vcxproj  test_math.vcxproj  test_stuff.vcxproj  test_vulkan.vcxproj  test_window.vcxproj
(+236 files in other folders)
